// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Render SkipsList 1`] = `
<div
  className="override-inputs"
>
  <SkipsInput
    canDelete={false}
    filter=""
    index={0}
    key="new"
    onChange={[Function]}
  />
</div>
`;

exports[`Should Render SkipsList with existing skips 1`] = `
<div
  className="override-inputs"
>
  <SkipsInput
    autoFocus={true}
    canDelete={true}
    filter="bookface"
    index={0}
    key="0"
    onChange={[Function]}
  />
  <SkipsInput
    canDelete={false}
    filter=""
    index={1}
    key="new"
    onChange={[Function]}
  />
</div>
`;

exports[`Should update with new skips 1`] = `
<SkipsList
  onChange={[MockFunction]}
  skips={
    Array [
      "bookface",
    ]
  }
>
  <div
    className="override-inputs"
  >
    <SkipsInput
      autoFocus={true}
      canDelete={true}
      filter="bookface"
      index={0}
      key="0"
      onChange={[Function]}
    >
      <div
        className="list-item"
      >
        <input
          autoFocus={true}
          className="filter"
          onChange={[Function]}
          placeholder="favioli.com"
          style={
            Object {
              "color": "black",
            }
          }
          value="bookface"
        />
        <button
          className="remove"
          onClick={[Function]}
        >
          X
        </button>
      </div>
    </SkipsInput>
    <SkipsInput
      canDelete={false}
      filter=""
      index={1}
      key="new"
      onChange={[Function]}
    >
      <div
        className="list-item"
      >
        <input
          className="filter"
          onChange={[Function]}
          placeholder="favioli.com"
          style={
            Object {
              "color": "black",
            }
          }
          value=""
        />
      </div>
    </SkipsInput>
  </div>
</SkipsList>
`;

exports[`Should update with new skips 2`] = `
<SkipsList
  onChange={[MockFunction]}
  skips={
    Array [
      "bookface",
      "/bookface/",
    ]
  }
>
  <div
    className="override-inputs"
  >
    <SkipsInput
      autoFocus={true}
      canDelete={true}
      filter="bookface"
      index={0}
      key="0"
      onChange={[Function]}
    >
      <div
        className="list-item"
      >
        <input
          autoFocus={true}
          className="filter"
          onChange={[Function]}
          placeholder="favioli.com"
          style={
            Object {
              "color": "black",
            }
          }
          value="bookface"
        />
        <button
          className="remove"
          onClick={[Function]}
        >
          X
        </button>
      </div>
    </SkipsInput>
    <SkipsInput
      canDelete={false}
      filter=""
      index={1}
      key="new"
      onChange={[Function]}
    >
      <div
        className="list-item"
      >
        <input
          className="filter"
          onChange={[Function]}
          placeholder="favioli.com"
          style={
            Object {
              "color": "black",
            }
          }
          value=""
        />
      </div>
    </SkipsInput>
  </div>
</SkipsList>
`;
